# Aegis

./: .gitignore  Agents.md  README.md  bunfig.toml  eslint.config.js  package.json  svelte.config.js  temp_layout_update.py  tmp_invoke_check.py  tsconfig.json  tsconfig.vitest.json  vite.config.js  vitest-setup.ts  vitest.config.ts
docs/: CONTRIBUTING.md  TECHNICAL_DETAILS.md
docs/security/: spam-classifier.md
scripts/: check_tauri_invoke_keys.py
src/: app.css  app.html
src-tauri/: Cargo.toml  aegis.db  dev.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20250723000000_initial_schema.sql  20250723000001_add_server_members_table.up.sql  20250724000000_add_channel_type_and_private_to_channels.sql  20250724000001_create_friendships_table.sql  20250724000002_add_username_is_online_and_created_at_to_tables.sql  20250725000000_create_attachments_table.down.sql  20250725000000_create_attachments_table.up.sql  20250726000000_create_message_reactions_table.up.sql  20250727000000_create_group_chats_table.up.sql  20250728000000_add_message_edit_metadata.sql  20250729000000_add_invites_and_channel_preferences.sql  20250801000000_add_server_metadata_roles.sql  20250802000001_add_message_expiry.sql  20250803000000_create_user_reports_table.sql  20250804000000_create_server_events_table.down.sql  20250804000000_create_server_events_table.up.sql  20250805000000_create_server_webhooks_table.down.sql  20250805000000_create_server_webhooks_table.up.sql  20250806000000_create_server_bans_table.down.sql  20250806000000_create_server_bans_table.up.sql  20250807000000_create_typing_indicators_table.down.sql  20250807000000_create_typing_indicators_table.up.sql  20250808000000_create_server_role_assignments.sql  20250809000000_create_channel_categories_table.down.sql  20250809000000_create_channel_categories_table.up.sql  20250810000000_add_presence_fields_to_users.sql  20250811000000_create_reviews_table.up.sql  20250815000002_add_message_pinned_flag.sql  20250820000000_add_server_moderation_preferences.sql  20250821000000_add_server_read_receipt_setting.sql  20250822000000_add_message_reply_metadata.sql  20250823000000_create_message_reports_table.sql  20251214000000_create_fts_table.sql
src-tauri/src/: bootstrap.rs  connectivity.rs  lib.rs  main.rs  rkyv_utils.rs  settings_store.rs
src-tauri/src/aegis-core/: Cargo.toml
src-tauri/src/aegis-core/src/: lib.rs
src-tauri/src/aegis-core/src/services/: mod.rs
src-tauri/src/aegis-protocol/: Cargo.toml
src-tauri/src/aegis-protocol/src/: lib.rs
src-tauri/src/aegis-shared-types/: Cargo.toml
src-tauri/src/aegis-shared-types/src/: lib.rs
src-tauri/src/aegis_types/: Cargo.toml
src-tauri/src/aegis_types/src/: lib.rs
src-tauri/src/aep/: Cargo.toml  rkyv_utils.rs
src-tauri/src/aep/src/: database.rs  lib.rs  rkyv_utils.rs  user_service.rs  utils.rs
src-tauri/src/aep/src/database/: channels.rs  events.rs  friendships.rs  groups.rs  init.rs  messages.rs  mod.rs  reviews.rs  servers.rs  utils.rs
src-tauri/src/aep/src/handlers/: chat.rs  discovery.rs  files.rs  friendship.rs  groups.rs  mod.rs  servers.rs  voice.rs
src-tauri/src/bootstrap/: constants.rs  file_transfer.rs  group_keys.rs  mod.rs  setup.rs
src-tauri/src/bootstrap/setup/: app.rs  context.rs  directories.rs  identity.rs  mod.rs  network.rs  state.rs  swarm.rs  tasks.rs
src-tauri/src/bootstrap/setup/handlers/: application.rs  discovery.rs  files.rs  gossip.rs  mod.rs  outbox.rs
src-tauri/src/commands/: calls.rs  chats.rs  collaboration.rs  connected_accounts.rs  connectivity.rs  data_privacy.rs  devices.rs  files.rs  friends.rs  identity.rs  messages.rs  mod.rs  moderation.rs  presence.rs  relays.rs  reviews.rs  servers.rs  settings.rs  state.rs  users.rs
src-tauri/src/commands/chats/: create.rs  helpers.rs  membership.rs  mod.rs  queries.rs  rename.rs
src-tauri/src/commands/devices/: approvals.rs  helpers.rs  inventory.rs  management.rs  mod.rs  provisioning.rs  sync.rs  types.rs
src-tauri/src/commands/friends/: discovery.rs  mod.rs  models.rs  moderation.rs  relationships.rs  requests.rs  tests.rs  utils.rs
src-tauri/src/commands/messages/: delivery.rs  encryption.rs  events.rs  helpers.rs  link_preview.rs  mod.rs  moderation.rs  reactions.rs  tests.rs  types.rs
src-tauri/src/commands/messages/encryption/: dm.rs  envelope.rs  group.rs  mod.rs
src-tauri/src/commands/servers/: admin.rs  channels.rs  core.rs  events.rs  invites.rs  mod.rs  webhooks.rs
src-tauri/src/connectivity/: bridge.rs  manager.rs  mod.rs  relays.rs  snapshot.rs
src-tauri/src/connectivity/manager/: bridge_control.rs  mod.rs  orchestrator.rs  routing.rs  runtime.rs  tasks.rs  transport.rs
src-tauri/src/crypto/: Cargo.toml
src-tauri/src/crypto/src/: identity.rs  lib.rs
src-tauri/src/e2ee/: Cargo.toml
src-tauri/src/e2ee/src/: lib.rs
src-tauri/src/network/: Cargo.toml
src-tauri/src/network/src/: aerp.rs  bluetooth.rs  lib.rs  rkyv_utils.rs  transports.rs  wifi_direct.rs
src-tauri/src/scu128/: Cargo.toml  mod.rs
src-tauri/src/scu128/src/: lib.rs
src-tauri/tests/: attachments.rs  crypto.rs  moderation_reports.rs  prepare_dev_db.rs  server_bans.rs  server_updates.rs
src/lib/: contextKeys.ts  contextTypes.ts
src/routes/: +layout.svelte  +page.svelte
tests/chat/: attachments.test.ts  chatActionMenu.preferences.test.ts  chatSearchPagination.test.ts  chatSearchStore.test.ts  chatStore.deleteMessage.test.ts  chatStore.encryption.test.ts  chatStore.groupChats.test.ts  chatStore.notifications.test.ts  chatStore.readTyping.test.ts  chatStore.test.ts  chatView.privacy.test.ts  connectivityStore.mock.ts  contextMenuPayloads.test.ts  createGroupModal.test.ts  detailedProfileModal.test.ts  directMessageRoster.test.ts  directMessageSearch.test.ts  fileTransferStore.autoDownload.test.ts  linkPreview.test.ts  markdownFormatter.test.ts  mentionPermissions.test.ts  mentionSuggestions.store.test.ts  messageAuthorName.test.ts  messageRendering.snapshot.test.ts  messageSearch.test.ts  navigationHeader.actions.test.ts  renderMessageContent.test.ts  (+3 more)
(+415 files in other folders)
