[package]
name = "aegis"
version = "0.1.0"
description = "A chat app inspired by discord but focuses on security, privacy, and anonymity"
authors = ["xein"]
edition = "2021"

[lib]
name = "aegis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = ["tray-icon", "test"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-store = "2.4.0"
tauri-plugin-notification = "2.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "time"] }
libp2p = { version = "0.40", features = ["gossipsub", "tcp-tokio", "noise", "mplex", "identify", "mdns"] }
chrono = { version = "0.4", features = ["serde"] }
btleplug = "0.11.8"
bleasy = "0.3.1"
futures = "0.3"
once_cell = "1.19"
tracing = "0.1"

aegis-shared-types = { path = "./src/aegis-shared-types" }
aegis-protocol = { path = "./src/aegis-protocol" }
aegis_types = { path = "./src/aegis_types" }
aegis-core = { path = "./src/aegis-core" }
network = { path = "./src/network" }
crypto = { path = "./src/crypto" }
e2ee = { path = "./src/e2ee" }
aep = { path = "./src/aep" }
scu128 = { path = "./src/scu128" }

chacha20poly1305 = { version = "0.10", features = ["alloc"] }
bincode = "1.3.3"
argon2 = "0.5"
rand = "0.8.5"
bs58 = "0.4"
base64 = "0.22"

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
scraper = "0.20"

[dev-dependencies]
rstest = "0.21.0"
assert_cmd = "2.0.14"
tempfile = "3"
