[package]
name = "aegis-core"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1.0", features = ["full"] }
crypto = { path = "../../src/crypto" }
aegis-shared-types = { path = "../aegis-shared-types" }
aes-gcm = { version = "0.10", features = ["aes", "alloc"] }
rand = "0.8"
libp2p = { version = "0.40", features = ["gossipsub", "tcp-tokio", "noise", "mplex", "identify"] }
bincode = "1.3"
typenum = "1.17.0"

