[package]
name = "aegis-protocol"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.40", features = ["gossipsub", "tcp-tokio", "noise", "mplex", "identify"] }
bincode = "1.3"
bs58 = "0.4"
aegis-shared-types = { path = "../aegis-shared-types" }
