[package]
name = "aegis-protocol"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libp2p = { version = "0.40", features = ["gossipsub", "tcp-tokio", "noise", "mplex", "identify"] }
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }
bytecheck = "0.6"
bs58 = "0.4"
aegis-shared-types = { path = "../aegis-shared-types" }
chrono = { version = "0.4", features = ["serde"] }
