[package]
name = "aegis-shared-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
libp2p = { version = "0.40", features = ["gossipsub", "tcp-tokio", "noise", "mplex", "identify"] }
tokio = { version = "1.0", features = ["full"] }
crypto = { path = "../../src/crypto" }
