[package]
name = "aep"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
dirs = "5.0"
libp2p = { version = "0.40", features = ["gossipsub", "tcp-tokio", "noise", "mplex", "identify"] }
bincode = "1.3"
bs58 = "0.4"
aegis-shared-types = { path = "../aegis-shared-types" }
aegis-protocol = { path = "../aegis-protocol" }
aegis_types = { path = "../aegis_types" }
crypto = { path = "../crypto" }
aegis-core = { path = "../aegis-core" }
