[package]
name = "e2ee"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "1.3" }
parking_lot = "0.12"
once_cell = "1.19"
ring = "0.17"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
ratchetx2 = { version = "0.3.8", default-features = false }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
x25519-dalek = "1"
serde_json = "1"
