[package]
name = "e2ee"
version = "0.1.0"
edition = "2021"

[dependencies]
vodozemac = "0.7.0"
parking_lot = "0.12"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
rkyv = { version = "0.7", features = ["validation"] }
anyhow = "1.0"
rand = "0.8"
base64 = "0.21"
tokio = { version = "1.0", features = ["sync"] }
