[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.40", features = ["gossipsub", "tcp-tokio", "noise", "mplex", "identify", "mdns", "request-response"] }
bytes = "1"
bincode = "1.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
sha2 = "0.10"
aep = { path = "../aep" }
async-trait = "0.1"
